--- a/index.html
+++ b/index.html
@@ -8,18 +8,81 @@
 </head>
 <body>
     <header>
-        <a href="">Webstudio</a>
         <nav>
+        <a href="/">Webstudio</a>
         <ul>
-            <li>Studio</li>
-            <li>Portfolio</li>
-            <li>Contacts</li>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
         </ul>
         </nav>
-        <a href="mail.to:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <ul>
+            <li><a href="mail.to:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
     </header>
-    <main></main>
+    <main>
+       <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+       </section>
+       <section>
+        <ul>
+            <li>
+                <h2>Strategy</h2>
+                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li>
+                <h2>Punctuality</h2>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li>
+                <h2>Diligence</h2>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+                <h2>Technologies</h2>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+       </section>
+       <section>
+        <h2>What are we doing</h2>
+        <ul>
+            <li>
+                <img src="./images/photo1.jpg" alt="" width="360">
+            </li>
+            <li>
+                <img src="./images/photo2.jpg" alt="" width="360">
+            </li>
+            <li>
+                <img src="./images/photo3.jpg" alt="" width="360">
+            </li>
+        </ul>
+       </section>
+       <section>
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+       </section>
+
+    </main>
     <footer></footer>
 </body>
 </html>
