--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
         </nav>
         <ul>
             <li><a href="mail.to:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+            <li><a href="tel:+110001111111">+110001111111</a></li>
         </ul>
     </header>
     <main>
        <section>
-        <h1>Effective Solutions for Your Business</h1>
+       <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
        </section>
        <section>
+        <h2 hidden>About us</h2>
         <ul>
             <li>
                 <h2>Strategy</h2>
@@ -64,18 +65,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
+                <img src="./images/mark.jpg" alt="Mark Gurrero" width="264">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
+                <img src="./images/tom.jpg" alt="Tom Ford" width="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
+                <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
+                <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
@@ -83,6 +88,9 @@
        </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <a href="/">Webstudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
