--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
             <li><a href="">Contacts</a></li>
         </ul>
         </nav>
-        
-            <li><a href="mail.to:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+110001111111</a></li>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
         </address>
     </header>   
     <main>
@@ -30,19 +32,19 @@
         <h2 hidden>About us</h2>
         <ul>
             <li>
-                <h2>Strategy</h2>
+                <h3>Strategy</h3>
                 <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h2>Punctuality</h2>
+                <h3>Punctuality</h3>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                <h2>Diligence</h2>
+                <h3>Diligence</h3>
                 <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                <h2>Technologies</h2>
+                <h3>Technologies</h3>
                 <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
@@ -51,13 +53,13 @@
         <h2>What are we doing</h2>
         <ul>
             <li>
-                <img src="./images/photo1.jpg" alt="" width="360">
+                <img src="./images/photo1.jpg" alt="computer screen" width="360">
             </li>
             <li>
-                <img src="./images/photo2.jpg" alt="" width="360">
+                <img src="./images/photo2.jpg" alt="phone screen" width="360">
             </li>
             <li>
-                <img src="./images/photo3.jpg" alt="" width="360">
+                <img src="./images/photo3.jpg" alt="phone in the hand" width="360">
             </li>
         </ul>
        </section>
