--- a/index.html
+++ b/index.html
@@ -1,98 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-        </ul>
+    <!-- header -->
+    <header class="header">
+        <nav class="header-nav">
+            <a class="header-logo" href="./index.html">WebStudio</a>
+            <ul class="nav-list">
+                <li class="nav-item"><a href="">Studio</a></li>
+                <li class="nav-item"><a href="">Portfolio</a></li>
+                <li class="nav-item"><a href="">Contacts</a></li>
+            </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="contacts">
+            <ul class="contacts-list">
+                <li class="contacts-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li=classlink>
+                <li class="contacts-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li=class=link>
             </ul>
         </address>
-    </header>   
+    </header>
     <main>
-       <section>
-       <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-       </section>
-       <section>
-        <h2 hidden>About us</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li>
-        </ul>
-       </section>
-       <section>
-        <h2>What are we doing</h2>
-        <ul>
-            <li>
-                <img src="./images/photo1.jpg" alt="computer screen" width="360">
-            </li>
-            <li>
-                <img src="./images/photo2.jpg" alt="phone screen" width="360">
-            </li>
-            <li>
-                <img src="./images/photo3.jpg" alt="phone in the hand" width="360">
-            </li>
-        </ul>
-       </section>
-       <section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
-                <img src="./images/mark.jpg" alt="Mark Gurrero" width="264">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/tom.jpg" alt="Tom Ford" width="264">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </li>
-        </ul>
-       </section>
+        <!-- Hero section -->
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="hero-btn" type="button">Order Service</button>
+        </section>
+        <!-- About us section -->
+        <section class="info">
+            <h2 hidden>About us</h2>
+            <ul class="info-list">
+                <li class="info-item">
+                    <h3 class="info-title">Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    </p>
+                </li>
+                <li class="info-item">
+                    <h3 class="info-title">Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
+                </li>
+                <li class="info-item">
+                    <h3 class="info-title">Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li class="info-item">
+                    <h3 class="info-title">Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Works section -->
+        <section class="works">
+            <h2 class="works-title">What are we doing</h2>
+            <ul class="works-list">
+                <li class="works-img">
+                    <img src="./images/photo1.jpg" alt="computer screen" width="360">
+                </li>
+                <li class="works-img">
+                    <img src="./images/photo2.jpg" alt="phone screen" width="360">
+                </li>
+                <li class="works-img">
+                    <img src="./images/photo3.jpg" alt="phone in the hand" width="360">
+                </li>
+            </ul>
+        </section>
+        <!-- Team section -->
+        <section class="team">
+            <h2>Our Team</h2>
+            <ul class="team-list">
+                <li>
+                    <img src="./images/mark.jpg" alt="Mark Gurrero" width="264">
+                    <h3 class="team-title">Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/tom.jpg" alt="Tom Ford" width="264">
+                    <h3 class="team-title">Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
+                    <h3 class="team-title">Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
 
     </main>
-    <footer>
+    <footer class="footer">
         <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 </body>
+
 </html>
