--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- header -->
-    <header class="header">
+    <header>
         <nav class="header-nav">
-            <a class="header-logo" href="./index.html">WebStudio</a>
+            <a class="header-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
             <ul class="nav-list">
-                <li class="nav-item"><a href="">Studio</a></li>
-                <li class="nav-item"><a href="">Portfolio</a></li>
-                <li class="nav-item"><a href="">Contacts</a></li>
+                <li class="nav-item "><a class="nav-item link" href ="">Studio</a></li>
+                <li class="nav-item "><a class="nav-item link" href="">Portfolio</a></li>
+                <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="contacts">
             <ul class="contacts-list">
-                <li class="contacts-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li=classlink>
-                <li class="contacts-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li=class=link>
+                <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li=classlink>
+                <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li=class=link>
             </ul>
         </address>
     </header>
@@ -76,7 +78,7 @@
         </section>
         <!-- Team section -->
         <section class="team">
-            <h2>Our Team</h2>
+            <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
                 <li>
                     <img src="./images/mark.jpg" alt="Mark Gurrero" width="264">
@@ -85,26 +87,27 @@
                 </li>
                 <li>
                     <img src="./images/tom.jpg" alt="Tom Ford" width="264">
-                    <h3 class="team-title">Tom Ford</h3>
+                    <h3 class="team-list-title">Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
-                    <h3 class="team-title">Camila Garcia</h3>
+                    <h3 class="team-list-title">Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="team-list-title">Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
 
     </main>
-    <footer class="footer">
-        <a href="./index.html">WebStudio</a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+    <!-- Footer section -->
+    <footer class="footnote">
+        <a class="footer-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <p class="footnote-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
 </body>
