--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 
 <body>
     <!-- header -->
-    <header>
-        <nav class="header-nav">
-            <a class="header-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
-            <ul class="nav-list">
-                <li class="nav-item "><a class="nav-item link" href ="">Studio</a></li>
-                <li class="nav-item "><a class="nav-item link" href="">Portfolio</a></li>
-                <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="contacts">
-            <ul class="contacts-list">
-                <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li=classlink>
-                <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li=class=link>
-            </ul>
-        </address>
-    </header>
+<header>
+    <nav class="header-nav">
+        <a class="header-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <ul class="nav-list">
+            <li class="nav-item "><a class="nav-item link" href="">Studio</a></li>
+            <li class="nav-item "><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
+        </ul>
+    </nav>
+    <address class="contacts">
+        <ul class="contacts-list">
+            <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li=classlink>
+            <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li=class=link>
+        </ul>
+    </address>
+</header>
     <main>
         <!-- Hero section -->
         <section class="hero">
