--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,88 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <!-- header -->
+<header>
+    <nav class="header-nav">
+        <a class="header-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <ul class="nav-list">
+            <li class="nav-item "><a class="nav-item link" href="./index.html">Studio</a></li>
+            <li class="nav-item "><a class="nav-item link" href="">Portfolio</a></li>
+            <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
+        </ul>
+    </nav>
+    <address class="contacts">
+        <ul class="contacts-list">
+            <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li=classlink>
+            <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li=class=link>
+        </ul>
+    </address>
+</header>
+<main>
+    <section>
+        <h1 hidden>Portfolio</h1>
+    <ul>
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Design</button></li>
+        <li><button type="button">Marketing</button></li>
+    </ul>
+    <ul>
+        <li>
+            <a href=""><img src="./images/banking-app.jp" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=""><img src="./images/payment.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=""><img src="./images/meditation-.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=><img src="./images/taxi.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=""><img src="./images/screen.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=""><img src="./images/courses.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=""><img src="./images/insta.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=""><img src="./images/organik.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+        <li>
+            <a href=""><img src="./images/coffee.jpg" alt=""></a>
+            <h3></h3>
+            <p></p>
+        </li>
+    </ul> 
+    </section>  
+</main>
+</body>
+<!-- Footer section -->
+<footer class="footnote">
+    <a class="footer-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+    <p class="footnote-text">Increase the flow of customers and sales for your business with digital marketing &
+        growth solutions.</p>
+</footer>
 </body>
 </html>
