--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <ul class="team-list">
                 <li>
                     <img src="./images/mark.jpg" alt="Mark Gurrero" width="264">
-                    <h3 class="team-title">Mark Guerrero</h3>
+                    <h3 class="team-list-title">Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
