--- a/portfolio.html
+++ b/portfolio.html
@@ -28,60 +28,61 @@
     </address>
 </header>
 <main>
-    <section>
+    <!-- main section -->
+    <section class="portfolio">
         <h1 hidden>Portfolio</h1>
     <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+        <li><button class="portfolio-btn" type="button">All</button></li>
+        <li><button class="portfolio-btn" type="button">Web Site</button></li>
+        <li><button class="portfolio-btn" type="button">App</button></li>
+        <li><button class="portfolio-btn" type="button">Design</button></li>
+        <li><button class="portfolio-btn" type="button">Marketing</button></li>
     </ul>
-    <ul>
+    <ul class="portfolio-list">
         <li>
-            <a href=""><img src="./images/banking-app.jp" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/banking-app.jpg" alt="banking-app" width="360" ></a>
+            <h2 class="portfolio-list-title">Banking App Interface Concept</h2>
+            <p class="portfolio-text">App</p>
         </li>
         <li>
-            <a href=""><img src="./images/payment.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/payment.jpg" alt="cashless payment" width="360"></a>
+            <h2 class="portfolio-list-title">Cashless Payment</h2>
+            <p class="portfolio-text">Marketing</p>
         </li>
         <li>
-            <a href=""><img src="./images/meditation-.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/meditation-.jpg" alt="meditation-app" width="360"></a>
+            <h2 class="portfolio-list-title">Meditation App</h2>
+            <p class="portfolio-text">App</p>
         </li>
         <li>
-            <a href=><img src="./images/taxi.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=><img src="./images/taxi.jpg" alt="taxi service" width="360"></a>
+            <h2 class="portfolio-list-title">Taxi Service</h2>
+            <p class="portfolio-text">Marketing</p>
         </li>
         <li>
-            <a href=""><img src="./images/screen.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/screen.jpg" alt="screen illustrations" width="360"></a>
+            <h2 class="portfolio-list-title">Screen Illustrations</h2>
+            <p class="portfolio-text">Design</p>
         </li>
         <li>
-            <a href=""><img src="./images/courses.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/courses.jpg" alt="online courses" width="360"></a>
+            <h2 class="portfolio-list-title">Online Courses</h2>
+            <p class="portfolio-text">Marketing</p>
         </li>
         <li>
-            <a href=""><img src="./images/insta.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/insta.jpg" alt="instagram storie" width="360"></a>
+            <h2 class="portfolio-list-title">Instagram Stories Concept</h2>
+            <p class="portfolio-text">Design</p>
         </li>
         <li>
-            <a href=""><img src="./images/organik.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/organik.jpg" alt="organik food" width="360"></a>
+            <h2 class="portfolio-list-title">Organik food</h2>
+            <p class="portfolio-text">Web Site</p>
         </li>
         <li>
-            <a href=""><img src="./images/coffee.jpg" alt=""></a>
-            <h3></h3>
-            <p></p>
+            <a class="portfolio-link" href=""><img src="./images/coffee.jpg" alt="fresh coffee" width="360"></a>
+            <h2 class="portfolio-list-title">Fresh coffee</h2>
+            <p class="portfolio-text">Web Site</p>
         </li>
     </ul> 
     </section>  
