--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,8 +23,8 @@
     </nav>
     <address class="contacts">
         <ul class="contacts-list">
-            <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li=classlink>
-            <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li=class=link>
+            <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
 </header>
@@ -55,7 +56,7 @@
             <p class="portfolio-text">App</p>
         </li>
         <li>
-            <a class="portfolio-link" href=><img src="./images/taxi.jpg" alt="taxi service" width="360"></a>
+            <a class="portfolio-link" href=""><img src="./images/taxi.jpg" alt="taxi service" width="360"></a>
             <h2 class="portfolio-list-title">Taxi Service</h2>
             <p class="portfolio-text">Marketing</p>
         </li>
@@ -87,7 +88,6 @@
     </ul> 
     </section>  
 </main>
-</body>
 <!-- Footer section -->
 <footer class="footnote">
     <a class="footer-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
