--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
     <!-- header -->
 <header>
-    <nav class="header-nav">
-        <a class="header-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+    <nav class="list">
+        <a class="header-logo link" href="./index.html">Web<span class="logo-part">Studio</span></a>
+        
         <ul class="nav-list">
             <li class="nav-item "><a class="nav-item link" href="">Studio</a></li>
             <li class="nav-item "><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
