--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="header-logo link" href="./index.html">Web<span class="logo-part">Studio</span></a>
         
         <ul class="nav-list">
-            <li class="nav-item "><a class="nav-item link" href="">Studio</a></li>
+            <li class="nav-item "><a class="nav-item link" href="./index.html">Studio</a></li>
             <li class="nav-item "><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
             <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
         </ul>
