--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <!-- header -->
 <header>
-    <nav class="list">
+    <nav class="header-nav">
         <a class="header-logo link" href="./index.html">Web<span class="logo-part">Studio</span></a>
         
-        <ul class="nav-list">
+        <ul class="list">
             <li class="nav-item "><a class="nav-item link" href="./index.html">Studio</a></li>
             <li class="nav-item "><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
             <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
