--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <a class="header-logo link" href="./index.html">Web<span class="logo-part">Studio</span></a>
         
         <ul class="list">
-            <li class="nav-item "><a class="nav-item link" href="./index.html">Studio</a></li>
-            <li class="nav-item "><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
-            <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
+            <li class=""><a class="nav-item link" href="./index.html">Studio</a></li>
+            <li class=""><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
+            <li class=""><a class="nav-item link" href="">Contacts</a></li>
         </ul>
     </nav>
     <address class="contacts">
