--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
         <li>
             <a class="link" href=""><img src="./images/courses.jpg" alt="online courses" width="360">
             <h2 class="portfolio-list-title">Online Courses</h2>
-            <p class="portfolio-text">Marketing</p>
+            <p class="portfolio-text">Marketing</p></a>
         </li>
         <li>
             <a class="link" href=""><img src="./images/insta.jpg" alt="instagram storie" width="360">
@@ -77,12 +77,12 @@
         </li>
         <li>
             <a class="link" href=""><img src="./images/organik.jpg" alt="organik food" width="360">
-            <h2 class="portfolio-list-title">Organik food</h2>
+            <h2 class="portfolio-list-title">Organic food</h2>
             <p class="portfolio-text">Web Site</p></a>
         </li>
         <li>
             <a class="link" href=""><img src="./images/coffee.jpg" alt="fresh coffee" width="360">
-            <h2 class="portfolio-list-title">Fresh coffee</h2>
+            <h2 class="portfolio-list-title">Fresh Coffee</h2>
             <p class="portfolio-text">Web Site</p></a>
         </li>
     </ul> 
