--- a/portfolio.html
+++ b/portfolio.html
@@ -6,19 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
+<link href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- header -->
 <header>
     <nav class="header-nav">
-        <a class="header-logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
-        <ul class="nav-list">
-            <li class="nav-item "><a class="nav-item link" href="./index.html">Studio</a></li>
-            <li class="nav-item "><a class="nav-item link" href="">Portfolio</a></li>
-            <li class="nav-item "><a class="nav-item link" href="">Contacts</a></li>
+        <a class="header-logo link" href="./index.html">Web<span class="logo-part">Studio</span></a>
+        <ul class="list">
+            <li class="nav-item"><a class="nav-item link" href="./index.html">Studio</a></li>
+            <li class="nav-item"><a class="nav-item link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-item link" href="">Contacts</a></li>
         </ul>
     </nav>
     <address class="contacts">
@@ -77,7 +79,7 @@
         </li>
         <li>
             <a class="link" href=""><img src="./images/organik.jpg" alt="organik food" width="360">
-            <h2 class="portfolio-list-title">Organic food</h2>
+            <h2 class="portfolio-list-title">Organic Food</h2>
             <p class="portfolio-text">Web Site</p></a>
         </li>
         <li>
