--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <address class="contacts">
-        <ul class="contacts-list">
+        <ul class="list">
             <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
