--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <!-- About us section -->
         <section class="info">
-            <h2 class="hidden" hidden>About us</h2>
+            <h2 class="hideen-title" hidden>About us</h2>
             <ul class="list">
                 <li class="info-item">
                     <h3 class="info-title">Strategy</h3>
